Keep plan property in IdentityServicesPropertySourceFactory